--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
-            <script src="./index.bundle.js">
-            </script>
+        <meta name="viewport" content="width=device-width,initial-scale=1 minimum-scale=1" >
         </head>
     </head>
     <body>
         <div id="app"></div>
+        <script src="./index.bundle.js">
+        </script>
     </body>
 </html>
